# canvas_problem

./: .gitignore  Canvas.ipynb  README
ipytools/: CMakeLists.txt  __init__.py  head.py
ipytools/inc/: chackjkdata.h
ipytools/src/chackjkdata/: ColorsSchemes.C  CorrMetrics.C  global.C  graphdata.C  jkdata.C  timedata.C
output-for-test/: pot_3s1_cen_FconfNOmgccc_t017_B01_1600conf_080bin_misnered_observables.root  pot_5s2_cen_FconfNOmgccc_t017_B01_1600conf_080bin_misnered_observables.root
